// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parser should postprocess elements allow modify element metadata 1`] = `
{
  "aria": {
    "implicitRole": [Function],
    "naming": [Function],
  },
  "attributes": {
    "align": {
      "deprecated": true,
    },
    "contenteditable": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": {
      "deprecated": true,
    },
    "datafld": {
      "deprecated": true,
    },
    "dataformatas": {
      "deprecated": true,
    },
    "datasrc": {
      "deprecated": true,
    },
    "dir": {
      "enum": [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": {
      "enum": [
        "true",
        "false",
      ],
    },
    "hidden": {
      "enum": [
        "hidden",
        "until-found",
      ],
      "omit": true,
    },
    "id": {
      "enum": [
        /\\^\\\\S\\+\\$/,
      ],
    },
    "inert": {
      "boolean": true,
    },
    "spellcheck": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "tabindex": {
      "enum": [
        /\\^-\\?\\\\d\\+\\$/,
      ],
    },
  },
  "flow": true,
  "focusable": false,
  "implicitRole": [Function],
  "permittedContent": [
    "@flow",
    "dt",
    "dd",
  ],
  "tagName": "i",
  "templateRoot": false,
}
`;

exports[`parser should postprocess elements allow modify element metadata 2`] = `
{
  "aria": {
    "implicitRole": [Function],
    "naming": [Function],
  },
  "attributes": {
    "contenteditable": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": {
      "deprecated": true,
    },
    "dir": {
      "enum": [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": {
      "enum": [
        "true",
        "false",
      ],
    },
    "hidden": {
      "enum": [
        "hidden",
        "until-found",
      ],
      "omit": true,
    },
    "id": {
      "enum": [
        /\\^\\\\S\\+\\$/,
      ],
    },
    "inert": {
      "boolean": true,
    },
    "spellcheck": {
      "enum": [
        "true",
        "false",
      ],
      "omit": true,
    },
    "tabindex": {
      "enum": [
        /\\^-\\?\\\\d\\+\\$/,
      ],
    },
  },
  "flow": true,
  "focusable": false,
  "implicitRole": [Function],
  "permittedContent": [
    "@phrasing",
  ],
  "phrasing": true,
  "tagName": "u",
  "templateRoot": false,
}
`;
